--- a/style.css
+++ b/style.css
@@ -137,17 +137,16 @@ a:active {
         margin-top: 8px ;
     }
     
-    #searchBarContainer {
-        display: flex;
-        margin-top: 20px ;
-    }
-
         #searchBar {
+            margin-top: 20px;
             background-color: #f2f2f2;
             padding : 2px;
             border-radius: 20px;
             display:flex;
             align-items: center;
+            width: 100%;
+            max-width: 440px;
+            height: 50px;
         }
 
         #searchBar i {
@@ -158,15 +157,25 @@ a:active {
             align-items: center;
         }
 
-        #searchBar input{
-            height: 50px;
-            width: 234px;
+        #searchBar form {
+            width: 100%;
+            height: 100%;
+        }
+
+        #searchBar span {
+            width: 100%;
+            height: 100%;
+            align-items: center;
+            padding: 0 10px 0 10px;
+        }
+
+        #searchBar input {
+            width: 100%;
+            height: 100%;
+            border: none;
+            padding: 0 0 0 17px;
             font-size: 1em;
             font-weight: 700;
-            padding: 0px 0px 0px 17px;
-            border: solid #f2f2f2 1px;
-            border-right: none;
-            border-left: none;
         }
 
         #searchBar input::placeholder {
@@ -177,7 +186,6 @@ a:active {
         #searchBar input:focus {
             outline: none;
         }
-
 
         #searchBar button {
             width: 136px;
@@ -195,8 +203,16 @@ a:active {
                 display:none
             }
         button span.web {
-                display:inline-block
+                display:flex;
             }
+
+        form span.mobile {
+            display:none;
+        }
+        
+        form span.web {
+            display:flex;
+        }
 
         #searchBar button:hover{
             cursor:pointer;
@@ -683,18 +699,12 @@ a:active {
         align-items: center;
     }
 
-    #searchBar {
-        justify-content: center;
+    form span.mobile {
+        display:flex;
     }
-
-    #searchBar form {
-        width: 230px;
-    }
-
-    #searchBar button {
-        width: 51px;
-        height: 51px;
-        border-radius: 15px;
+    
+    form span.web {
+        display:none;
     }
 
     button span.mobile {
@@ -703,6 +713,14 @@ a:active {
     
     button span.web {
         display:none;
+    }
+
+    #searchBar button {
+        width: 52px;
+    }
+
+    #searchBar span {
+        padding: 0 0px 0 0px;
     }
 
 
@@ -766,18 +784,20 @@ a:active {
 
         .accommodationPopular .cards {
             width: 100%;
+            height: 133px;
             max-width: 500px;
             margin-left: 0px;
             margin-right: 0px;
         }
 
         .accommodationPopular .cards img{
-            width: 126px;
-            height: 133PX;
+            min-width: 126px;
+            height: 100%;
         }
 
         .accommodationPopular .cards .text {
             margin-left: 22px;
+            height : 100%;
         }
 
 
@@ -870,4 +890,27 @@ a:active {
             margin-right: 0px;
             max-width: 500px; 
         }
+    }
+
+    @media screen and (max-width: 440px) {
+        .accommodationPopular .cards .text {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        .accommodationPopular h2 {
+            font-size: .9em;
+            margin-top : 5px;
+        }
+
+        .accommodationPopular p {
+            font-size: .7em;
+            margin : 0;
+        }
+
+        .accommodationPopular .cards .stars {
+            margin-bottom : 5px;
+        }
+
     }
