HTML Correction (Error Span)

--- a/style.css
+++ b/style.css
@@ -162,16 +162,10 @@ a:active {
             height: 100%;
         }
 
-        #searchBar span {
-            width: 100%;
-            height: 100%;
-            align-items: center;
-            padding: 0 10px 0 10px;
-        }
-
         #searchBar input {
             width: 100%;
             height: 100%;
+            align-items: center;
             border: none;
             padding: 0 0 0 17px;
             font-size: 1em;
@@ -196,23 +190,17 @@ a:active {
             font-size: 1em;
             border: none;
             border-radius: 0 20px 20px 0;
+            padding: 0 20px 0 20px;
             transition-duration: 0.1s;
         }
 
         button span.mobile {
                 display:none
             }
+
         button span.web {
                 display:flex;
             }
-
-        form span.mobile {
-            display:none;
-        }
-        
-        form span.web {
-            display:flex;
-        }
 
         #searchBar button:hover{
             cursor:pointer;
@@ -699,14 +687,6 @@ a:active {
         align-items: center;
     }
 
-    form span.mobile {
-        display:flex;
-    }
-    
-    form span.web {
-        display:none;
-    }
-
     button span.mobile {
         display:flex;
     }
@@ -717,10 +697,7 @@ a:active {
 
     #searchBar button {
         width: 52px;
-    }
-
-    #searchBar span {
-        padding: 0 0px 0 0px;
+        padding: 0px;
     }
 
 
